log
Fri Apr 17 07:00:13 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:5: error: expected ‘,’ or ‘;’ before ‘while’
   76 |     while(map->buckets[indice]!=NULL)
      |     ^~~~~
hashmap.c:74:10: error: unused variable ‘inicio’ [-Werror=unused-variable]
   74 |     long inicio = indice
      |          ^~~~~~
cc1: all warnings being treated as errors
0fe9c6a
Fri Apr 17 07:00:41 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:22: error: ‘start’ undeclared (first use in this function)
   84 |         if(inicio == start) return break;
      |                      ^~~~~
hashmap.c:84:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:84:36: error: expected expression before ‘break’
   84 |         if(inicio == start) return break;
      |                                    ^~~~~
1eac4af
Fri Apr 17 07:00:55 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:37: error: expected expression before ‘break’
   84 |         if(inicio == indice) return break;
      |                                     ^~~~~
36b0c3a
Fri Apr 17 07:01:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
e665338
Fri Apr 17 07:09:30 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|6
total_score: 10/60
bbdbc9e
Sun Apr 19 10:55:21 PM UTC 2026: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:5: error: ‘newMap’ undeclared (first use in this function); did you mean ‘NewMap’?
   50 |     newMap->buckets =(Pair**)malloc(sizeof(Pair*)*capacity);
      |     ^~~~~~
      |     NewMap
hashmap.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:15: error: unused variable ‘NewMap’ [-Werror=unused-variable]
   48 |     HashMap * NewMap =(HashMap*)malloc(sizeof(HashMap));
      |               ^~~~~~
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
de04267
Sun Apr 19 10:55:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
bf9e1f1
Sun Apr 19 11:49:37 PM UTC 2026: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:53: error: expected ‘)’ before ‘return’
   78 |         if(is_equal(map->buckets[posicion]->key,key) return;
      |           ~                                         ^~~~~~~
      |                                                     )
hashmap.c:81:5: error: expected expression before ‘}’ token
   81 |     }
      |     ^
0a52025
Sun Apr 19 11:49:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 20/60
c05ca9b
Sun Apr 19 11:50:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 20/60
a93809d
Sun Apr 19 11:52:11 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 20/60
4e8e70c
Sun Apr 19 11:55:03 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
622e2ea
Sun Apr 19 11:55:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
1dd6b37
Sun Apr 19 11:55:45 PM UTC 2026: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|3
total_score: 30/60
98c749b
Mon Apr 20 12:13:47 AM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:129:34: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  129 |             is_equal(map->buckets->key,key)){
      |                                  ^~
      |                      (*          )
07dee1b
